Mon Feb 19 19:00:24 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Crash_On_Write/run_test.pl:

          Extend the client timeout so that very slow machines can complete 
          the test.

Mon Feb 19 18:59:01 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tao/DiffServPolicy/DiffServ_Network_Priority_Hook.h:

          Fixed the fuzz build errors.

Mon Feb 19 18:48:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Invocation_Adapter.cpp:
        * tao/Profile_Transport_Resolver.cpp:
        * tao/Transport_Connector.cpp:
          Layout changes

Mon Feb 19 18:42:50 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Crash_On_Write/run_test.pl:

          Check for -1 instead of -10 to indicate timeout.

Mon Feb 19 18:41:22 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * tao/Default_Network_Priority_Protocols_Hooks.cpp:
          Fixed return types in two versions of get_dscp_codepoint().  The
          return type did not match the header file types.

Mon Feb 19 16:37:26 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tao/DiffServPolicy/DiffServ_Protocols_Hooks.cpp:

          Fixed the RTEMS_NO_NETWORK build errors. The errors were in
          throwing exceptions in lines 96 and 102.

Mon Feb 19 14:42:08 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tao/Network_Priority_Protocols_Hooks.h:
        * tao/Default_Network_Priority_Protocols_Hooks.h:
        * tao/Default_Network_Priority_Protocols_Hooks.cpp:
        * tao/DiffServPolicy/DiffServ_Protocols_Hooks.h:
        * tao/DiffServPolicy/DiffServ_Protocols_Hooks.cpp:

          Modified the signature of get_dscp_codepoint () methods, to get rid
          of the "type qualifier meaningless" errors in most of the TAO
          builds.

Mon Feb 19 14:36:33 UTC 2007  Jaiganesh B  <jai.dre.vanderbilt.edu>

        * tao/TAO_Internal.cpp:

          Added a process directive to fix the ORB initialization errors.
